# apache-arrow-py-rust-demo

./: Cargo.toml  LICENSE  README.md  execute_demo.py  input_table.csv  pyproject.toml
src/: lib.rs
