[package]
name = "apache-arrow-py-rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "apache_arrow_py_rust_demo"
crate-type = ["cdylib"]

[dependencies]

[dependencies.arrow]
version = "46.0.0"
features = ["pyarrow", "csv"]

[dependencies.pyo3]
version = "0.19.2"
features = ["extension-module"]
